# bioagent-experiments

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  eval-environment.yml  evals.py  evaluate_planning.py  evaluate_run_db.py  glbio_charts.py  models.py  otel.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_ablations.py  run_evals.py  run_experiments.py  stability-logs.csv  test_codex_configs.py  test_codex_tokens.py  test_coding_framework_configs.py
ablation/: generate_corrupt_data.py  generate_decoys.py  generate_giab_decoy.sh  prompt_bloat.py
common/: agent.py  docker_sandbox.py  models.py  multiagent.py
comparative/: agent.py  environment.yaml  models.py  task.py  tools.py
config/: config.toml  settings.json
deseq/: agent.py  environment.yaml  task.py  tools.py
envs/: open-environment.yml  tools-environment.yml
evolution/: agent.py  enviroment.yaml  install_all_env.txt  models.py  task.py  tools.py
fibrosis/: agent.py  environment.yaml  fibrosis_agent.py  snpEff_genes.txt  snpEff_summary.html  task.py  tools.py
metagenomics/: agent.py  environment.yaml  models.py  task.py  tools.py
plotting/: heatmap_bar.py  scatter_plan_completion.py
results/: best_closed_models_completion_rate.csv  best_open_models_completion_rate.csv  harness_success_by_task.tex  prompt_bloat_delta.csv
results/data/: all_models_task_completion_rate.csv  best_models_task_completion_rate.csv  best_open_models_completion_rate.csv  harness_success_rate.csv  harness_success_rate_by_label.csv  harness_success_rate_by_model.csv  plan_vs_completion.csv
src/: __init__.py  agent.py  codex_mcp.py  dataset.py  docker_sandbox.py  eval.py  judge_agent.py  logs.py  mcp_configs.py  models.py  run_eval.py  system_prompts.py  task.py  tools.py
utils/: charts.py  plans_correlation.py  pretty_print_otel.py  robustness.py
