[project]
name = "bioagent-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "openinference-instrumentation-smolagents>=0.1.16",
    "arize-phoenix>=11.30.0",
    "openai>=1.109.0",
    "duckdb>=1.4.0",
    "e2b-code-interpreter>=2.1.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "smolagents",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
bioagent-experiments = { workspace = true }
smolagents = { path = "../smolagents" }

[dependency-groups]
dev = [
    "bioagent-experiments",
]

[tool.setuptools.packages.find]
where = ["src"]
