[project]
name = "bioagent-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "openai>=1.109.0",
    "duckdb>=1.4.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "smolagents @ git+https://github.com/dionizijefa/smolagents.git",
    "ruff>=0.14.1",
    "matplotlib>=3.10.7",
    "grpcio>=1.74.0",
    "opentelemetry-proto>=1.36.0",
    "googleapis-common-protos>=1.70.0",
    "toml>=0.10.2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
bioagent-experiments = { workspace = true }

[dependency-groups]
dev = [
    "bioagent-experiments",
]

[tool.setuptools.packages.find]
where = ["src"]
